k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-circle
  labels:
    app.kubernetes.io/name: devops-circle
