k8s/base/32-post-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: devops-circle
  labels:
    app: post-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: post-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
  namespace: devops-circle
  labels:
    app: post-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
        app.kubernetes.io/part-of: devops-circle
    spec:
      containers:
        - name: post-service
          image: ahmed63/devops-circle-post-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 160Mi
            limits:
              cpu: 500m
              memory: 512Mi
