k8s/base/36-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: devops-circle
  labels:
    app: worker-service
spec:
  type: ClusterIP
  ports:
    - port: 9100
      targetPort: 9100
      name: metrics
  selector:
    app: worker-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  namespace: devops-circle
  labels:
    app: worker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-service
  template:
    metadata:
      labels:
        app: worker-service
        app.kubernetes.io/part-of: devops-circle
    spec:
      containers:
        - name: worker-service
          image: ahmed63/devops-circle-worker-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9100
              name: metrics
          readinessProbe:
            tcpSocket:
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: metrics
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 384Mi
